--- a/src/components/DashClients/dashclients.sass
+++ b/src/components/DashClients/dashclients.sass
@@ -11,6 +11,9 @@
 
         .table-dashclient
 
+            .table-client
+                transition: all 0.5s ease-in-out
+
             .header-dashclient
                 background: #3f51b5
                 font-weight: bold
