--- a/src/components/FormInput/forminput.sass
+++ b/src/components/FormInput/forminput.sass
@@ -18,11 +18,21 @@
             border-radius: 0.2em
             padding-left: 1em
 
+        .invalid
+            border: 1px solid #ff0000
+            animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both
+
             &:focus
                 box-shadow: 0 0 0 0.2em rgba(0, 0, 0, 0.25)
                 outline: none
                 transition: 0.2s ease-in-out
 
-           
-
-        
+            @keyframes shake
+                10%, 90%
+                    transform: translate3d(-1px, 0, 0)
+                20%, 80%
+                    transform: translate3d(2px, 0, 0)
+                30%, 50%, 70%
+                    transform: translate3d(-4px, 0, 0)
+                40%, 60%
+                    transform: translate3d(4px, 0, 0)
