--- a/src/components/FormClients/formclients.sass
+++ b/src/components/FormClients/formclients.sass
@@ -30,6 +30,18 @@
             .form-input-status
                 display: block
 
+                .select-status
+                    margin-top: .3em
+                    display: flex
+                    align-items: center
+                    color: #000
+
+                    select
+                        width: 60%
+                        height: 2.2em
+                        padding: .4em .4em
+                        margin-left: 1em
+
             .form-title
                 display: flex
                 color: #000
