--- a/src/components/NavBar/navbar.sass
+++ b/src/components/NavBar/navbar.sass
@@ -1,9 +1,8 @@
 
 
 .navBar
-    max-width: 13%
+    max-width: 16em
     min-width: 13.5em
-    height: 100vh
     background-color: #fff
     box-shadow: 0 5.3rem 0.5rem 0.3rem #ccc 
 
