--- a/src/components/DashClients/dashclients.sass
+++ b/src/components/DashClients/dashclients.sass
@@ -1,18 +1,20 @@
 @use '../../styles/mixins'
 
 
-.conatiner-dashclient   
-    width: 95%
+.conatiner-dashclient  
+    width: 90%
     margin: auto 
     @include mixins.animation
+    background: transparentize(#fff, 0.9)
 
     .table-container
-        max-height: 40em
 
         .table-dashclient
 
-            .table-client
-                transition: all 0.5s ease-in-out
+            .body-dashclient
+
+            .header-dashclient
+                padding: .9em
 
             .header-dashclient
                 background: #3f51b5
