--- a/src/pages/App/app.sass
+++ b/src/pages/App/app.sass
@@ -4,7 +4,8 @@
     .AppContainer
         width: 35%
         min-width: 250px
-        margin: 17% auto
+        margin: 0 auto
+        margin-top: 17%
         height: 50%
         background: #FFF
         padding: 2em
