--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -2,7 +2,6 @@
   padding: 0
   margin: 0
 
-
 :root
   font-family: 'Poppins', sans-serif
   font-size: 16px
@@ -11,12 +10,13 @@
   background: url(../../public/jardim.jpg) no-repeat center fixed
   background-size: cover
   color: #fff  
-  overflow: hidden
+  height: 100vh
+  overflow-x: hidden
 
   footer
     position: absolute
     color: #999999
-    bottom: 4em
+    bottom: 1em
     left: 5em
     width: 100%
     display: flex
