--- a/src/components/DashClients/dashclients.sass
+++ b/src/components/DashClients/dashclients.sass
@@ -2,19 +2,16 @@
 
 
 .conatiner-dashclient  
-    width: 90%
-    margin: auto 
+    max-width: 95rem
+    margin: 0 auto
     @include mixins.animation
-    background: transparentize(#fff, 0.9)
+
+    // .css-1yhpg23-MuiTableCell-root
+    //     text-align: left
 
     .table-container
 
         .table-dashclient
-
-            .body-dashclient
-
-            .header-dashclient
-                padding: .9em
 
             .header-dashclient
                 background: #3f51b5
