--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -11,7 +11,7 @@
   background-size: cover
   color: #fff  
   height: 100vh
-  overflow-x: hidden
+  overflow: hidden
 
   footer
     position: absolute
