--- a/src/components/DashClients/dashclients.sass
+++ b/src/components/DashClients/dashclients.sass
@@ -6,12 +6,20 @@
     margin: 0 auto
     @include mixins.animation
 
-    // .css-1yhpg23-MuiTableCell-root
-    //     text-align: left
+    .css-1yhpg23-MuiTableCell-root
+        text-align: left
 
     .table-container
 
         .table-dashclient
+
+            .nullClient
+                text-align: center
+                font-size: 1rem
+
+
+            .body-dashclient
+                cursor: pointer
 
             .header-dashclient
                 background: #3f51b5
